--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <li><a href="#">Developers</a></li>
                     <div class="nav-follow-section">
                         <p><a href="#">Follow Us On</a></p>
-                        <img src="/B8A2-Gamer-Zone/images/Vector.png" alt="">
-                        <img src="/B8A2-Gamer-Zone/images/tik-tok 1.png" alt=""></i>
+                        <img src="/Vector.png" alt="">
+                        <img src="/tik-tok 1.png" alt=""></i>
                     </div>
                     <li></li>
                 </ul>
@@ -229,7 +229,39 @@
 
 
     <footer>
-
+            <div class="footer-container">
+                <div class="footer-logo">
+                    <img src="./B8A2-Gamer-Zone/images/logo.png" alt="" />
+                    <h1><span class="text-primary">G</span>amer</h1>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Our Story</a></li>
+                        <li><a href="#">Games</a></li>
+                        <li><a href="#">Web Games</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">My Account</a></li>
+                    </ul>
+                </nav>
+                <div class="social-icon">
+                    <p>
+                        <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    </p>
+                    <p><a href=""><i class="fa-brands fa-instagram"></i></a></i></p>
+                    <p><a href=""><i class="fa-brands fa-linkedin-in"></i></a></p>
+                </div>
+                <div class="link">
+                    <p>Terms and Conditions</p>
+                    <p>Privacy Policy</p>
+                    <p>Cookie Policy</p>
+                    <p>Privacy Settings</p>
+                </div>
+                <p class="copyright">
+                    Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+                </p>
+            </div>
+       
     </footer>
 </body>
 </html>
